src/styles/views/index.css
.index {
  --has-featured: 0;
  display: grid;
}

.index:has(.index__section--featured) {
  --has-featured: 1;
}

.index__image {
  display: none;
}

.index__title {
  display: block;
  line-height: 1;
}

.index__heading {
  margin: 0;
  padding-bottom: 15px;
  z-index: 1;
}

.index__heading--no-bottom {
  padding: 0;
}

.index__section {
  display: flex;
  flex-direction: column;
  gap: 10px;
  margin: 0;
  padding: 20px 25px;
}

.index__section--header {
	flex-direction: row;
  gap: 0px;
	justify-content: start;
  align-items: start;
  padding: 0;
	background-color: hsl(var(--color-blue-accent));
}

.index__section--featured {
  gap: 0px;
  padding: 0;
}

.index__section--partners {
  gap: 25px;
}

.index__header-aside {
  display: flex;
  flex-direction: column;
  gap: 10px;
  padding: 30px 25px;
  width: max-content;
}

.index__title {
  margin: 0;
  padding: 0;
  font-size: 50px;
}

.index__heading {
  position: sticky;
  top: 58px;
  padding-left: 16px;
  margin-left: -16px;
  background-color: hsl(var(--color-background));
}

.index__subtitle {
  display: inline-flex;
  margin: 0;
  padding: 0;
  font-size: 24px;
  line-height: 1.25;
  margin-bottom: 9px;
}

.index__caption {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 1.4285714286;
}

.index__location {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
}

.index__action {
  display: inline-flex;
  padding: 10px 20px;
  background-color:  hsl(var(--color-background));
  width: fit-content;
  cursor: pointer;
  text-decoration: none;
  color: hsl(var(--color-text));
  border: 1px solid hsl(var(--color-primary));
}

.index__partners {
  display: flex;
  flex-direction: column;
  gap: 30px;
}

@media (min-width: 512px) {
  .index__header-cover {
    width: 100%;
    height: 100%;
  }

  .index__image {
    display: block;
    object-fit: cover;
    width: 100%;
    height: 100%;
  }
}

@media (min-width: 644px) {
  .index {
    grid-template-columns: repeat(2, 1fr);
  }

  .index__section--header {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 0px;
    grid-column-start: 1;
    grid-column-end: 3;
    grid-row-start: 1;
  }

  .index__section--featured {
    grid-column-start: 1;
    grid-column-end: 3;
    grid-row-start: 2;
  }

  .index__section--news {
    grid-column-start: 1;
    grid-column-end: 3;
  }

  .index__section--sections {
    grid-column-start: 1;
    grid-column-end: 3;
  }
}

@media (min-width: 768px) {
  .index {
    grid-template-columns: auto 364px;
  }

  .index__section--header {
    grid-template-columns: auto 364px;
  }

  .index__section--featured {
    grid-column-start: 1;
    grid-column-end: 3;
    grid-row-start: 2;
  }

  .index__section--calendar {
    grid-column-start: 2;
    grid-column-end: 3;
  }

  .index__section--streams {
    grid-column-start: 2;
    grid-column-end: 3;
  }

  .index__section--documents {
    grid-column-start: 2;
    grid-column-end: 3;
  }

  .index__section--news {
    grid-column-start: 1;
    grid-column-end: 2;
    grid-row-start: calc(2 + var(--has-featured));
    grid-row-end: calc(5 + var(--has-featured));
  }

  .index__section--sections {
    grid-column-start: 1;
    grid-column-end: 2;
  }

  .index__section--speakers {
    grid-column-start: 2;
    grid-column-end: 3;
  }

  .index__section--partners {
    display: grid;
    grid-column-start: 1;
    grid-column-end: 3;
    grid-row-start: 7;
  }

  .index__partners {
    display: grid;
    justify-content: space-between;
    grid-template-columns: repeat(3, auto);
  }

  .index__section--accommodation {
    grid-column-start: 1;
    grid-column-end: 2;
    grid-row-start: 5;
  }

  .index__section--archive {
    grid-column-start: 2;
    grid-column-end: 3;
  }
}

.index__list {
  display: grid;
  gap: 5px;
  list-style: square;
  padding-left: 1em;
}

.index__item {

}

.index__link {
  color: hsl(var(--color-text));
}

@media (min-width: 830px) {
  .index__action {
    display: none;
  }
}

@media (min-width: 1115px) {
  .index__section--header {
    display: grid;
    grid-template-columns: 1fr 364px;
    gap: 0px;
  }

  .index__section--partners {
    grid-column-start: 1;
    grid-column-end: 2;
  }
}

